# filesync

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md
src/: app.rs  events.rs  file_ops.rs  main.rs  ssh.rs  store.rs  ui.rs  util.rs
