[package]
name = "filesync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "filesync"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
ssh2 = "0.9"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
bytesize = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
